[package]
name = "rstore"
version = "0.1.0"
authors = ["Georgi Martsenkov <g.martsenkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
tokio = { version = "0.2.22", features = ["rt-core", "io-util", "tcp", "dns", "macros"] }
